fixed categories overlapping on anime-container

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
   .header img {
   }
   .anime-pic-container {
-    margin-top: 10%;
+    margin-top: 50px;
     padding: 10px;
   }
   .card {
